--- a/index.html
+++ b/index.html
@@ -13,12 +13,35 @@
     <p class="title">The be11ows Library</p>
   </header>
   <main>
-    form
+    <div class="form">
+      <form action="post" id="form">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" required>
+
+        <label for="author">Author</label>
+        <input type="text" name="author" id="author" required>
+
+        <label for="pages">Pages</label>
+        <input type="text" name="pages" id="pages" required>
+
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+
+      </form>
+    </div>
+    <div class="add-book">
+      <button class="add-btn">+ Add a Book +</button>
+    </div>
+    <div class="libary">
+
+    </div>
   </main>
   <footer>
-    <p class="photo-cred">Photo by Element5 Digital: https://www.pexels.com/photo/assorted-books-on-book-shelves-1370295/</p>
-    
+    <p class="photo-cred">Photo by <a href="https://www.pexels.com/photo/assorted-books-on-book-shelves-1370295/">Element5 Digital</a></p>
+    <p>Copyright © 2022 be11ows</p>
   </footer>
-  <script src="main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
