Add form and radio buttons

--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
         <label for="pages">Pages</label>
         <input type="text" name="pages" id="pages" required>
 
-        <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
+        <br>
+        <div class="radios">
+          <input type="radio" id="read" name="book-stataus" value="Read">
+          <label for="read">Read</label><br>
+          <input type="radio" id="not-read" name="book-stataus" value="Not read">
+          <label for="not-read">Not Read</label><br>
+          <input type="radio" id="curr-read" name="book-stataus" value="Currently Reading">
+          <label for="curr-read">Currently Reading</label><br>
+        </div>
+        <input type="submit">
 
       </form>
     </div>
-    <div class="add-book">
-      <button class="add-btn">+ Add a Book +</button>
-    </div>
-    <div class="libary">
 
+    <div class="libary">
+      the books will display here
     </div>
   </main>
   <footer>
