Correct delete button func and added edit button to each book card

--- a/index.html
+++ b/index.html
@@ -47,17 +47,23 @@
     <div id='library' class="library">
       <div class="book-card">
         <div class="title">Dispelling Wetiko</div>
-        <div class="author">Pual Levy</div>
-        <div class="pages">330</div>
-        <div class="status">Currently Reading</div>
-        <button class="bookDelete">Delete</button>
+        <div class="author">Author: Pual Levy</div>
+        <div class="pages">Pages: 330</div>
+        <div class="status">Status: Currently Reading</div>
+        <div class="book-buttons">
+          <button class="bookDelete">Delete</button>
+          <button class="bookEdit">Edit</button>
+        </div>
       </div>
       <div class="book-card">
         <div class="title">Privacy is Power</div>
-        <div class="author">Carissa Veliz</div>
-        <div class="pages">380</div>
-        <div class="status">Read</div>
-        <button class="bookDelete">Delete</button>
+        <div class="author">Author: Carissa Veliz</div>
+        <div class="pages">Pages: 380</div>
+        <div class="status">Status: Read</div>
+        <div class="book-buttons">
+          <button class="bookDelete">Delete</button>
+          <button class="bookEdit">Edit</button>
+        </div>
       </div>
     </div>
   </main>
